# kopi-registry

./: .pre-commit-config.yaml  Cargo.toml  README.md  README_zh.md  index.json
.github/workflows/: ci.yml  generate.yml
candidates/: gradle.json  hadoop.json  jmeter.json  kotlin.json  maven.json  tomcat.json
src/: main.rs  output.rs
src/candidates/: apache.rs  apache_dist.rs  gradle.rs  hadoop.rs  html.rs  jmeter.rs  kotlin.rs  maven.rs  maven_metadata.rs  mod.rs  tomcat.rs  versioning.rs
