[package]
name = "kopi-registry"
version = "0.1.0"
edition = "2024"
description = "Generate kopi registry JSON files from upstream sources"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
